<resources>
    <!-- 启动 -->
    <string name="skip_after_seconds">%d秒 跳过</string>

    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_not_required">不限</string>
    <string name="unknown">未知</string>

    <string name="grade_all">所有年级</string>
    <string name="grade_primary_school">小学</string>
    <string name="grade_middle_school">初中</string>
    <string name="grade_high_school">高中</string>

    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>

    <string name="url_header_http">http</string>
    <string name="url_header_https">https</string>

    <string name="load_data_failed_later_retry">加载失败，请稍候重试</string>
    <string name="async_image_retry">点击重试</string>
    <string name="async_image_load_fail">加载失败</string>
    <string name="ind_dialog_title">轻轻提醒</string>
    <string name="ind_kindly_remind">温馨提示</string>
    <string name="notice">通知</string>
    <string name="student_resource_enroll_title">生源宝报名</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="menu_tips">提示</string>
    <string name="quit">退出</string>
    <string name="delete_confirm">确认删除</string>
    <string name="delete">删除</string>
    <string name="confirm_logout">您确定要退出登录吗？</string>
    <string name="unknown_error">未知错误</string>
    <string name="got_it">我知道了</string>
    <string name="not_set_format">未设置%s</string>
    <string name="upgrade_default_error">升级文件下载失败</string>
    <string name="text_edit">编辑</string>
    <string name="text_submit">提交</string>
    <string name="text_done">完成</string>

    <string name="internal_test">内部测试</string>

    <string name="format_int_current_in_total">%1$d/%2$d</string>

    <string name="text_close_nav">关闭</string>
    <string name="text_back_nav">返回</string>

    <string name="text_hint_image_captcha">请输入图片验证码</string>
    <!-- 时间相关 -->
    <string name="date_format_year_month">yyyy年MM月</string>
    <string name="date_format_simple_year_month">yyyy.MM</string>
    <string name="date_until_now">至今</string>

    <string name="webview_loading_ind">载入中…</string>
    <string name="webview_retry_title">无法连接互联网</string>
    <string name="webview_retry_detail">请检查您的网络连接，或点击这里刷新</string>
    <string name="webview_retry">刷新</string>
    <string name="sharev2_html_title">分享链接</string>
    <string name="sharev2_share_title">轻轻家教的这个%1$s老师好棒！已经有了%2$d条评价！</string>
    <string name="sharev2_share_title_short">轻轻家教的这个%1$s老师好棒！</string>
    <string name="share_out_default_content">轻轻家教，您的私人家庭教师</string>
    <!-- 微博分享相关-->
    <string name="weibo_share_title">分享到新浪微博</string>
    <string name="weibo_share_send">分享</string>
    <string name="weibo_share_bottom_tip">已附带原文链接和图片</string>
    <string name="weibo_share_success">分享成功</string>
    <string name="weibo_share_cancel">分享已取消</string>
    <string name="weibo_share_failed">分享错误(%1$s)</string>

    <string name="last_update_time_text">"上次更新时间：%s"</string>
    <string name="my_message">我的消息</string>
    <string name="text_disable_upload_file">无法进行上传</string>
    <string name="title_qingqing_tips">轻轻小贴士</string>
    <string name="text_select">请选择</string>
    <string name="title_dlg_default_select_picture">选择照片</string>

    <!-- 地图导航 -->
    <string name="title_amap_navi">地址导航</string>
    <string name="text_go_there">到这去</string>
    <string name="text_unknown_distance">距离未知</string>
    <string name="text_navi_distance">%.2fkm</string>
    <string name="text_navi_address_invalid">获取地址失败</string>
    <string name="text_title_teacher_address">老师常住地址</string>
    <string name="text_title_attend_class_address">上课地址</string>

    <!--消息-->
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>
    <string name="message">消息</string>

    <!-- im群组 -->
    <string name="chat_setting_title">聊天设置</string>
    <string name="chat_group_title">群设置</string>
    <string name="group_edit_title">设置群名称</string>
    <string name="im_group_id">群组ID</string>
    <string name="im_group_number">群组人数</string>
    <string name="im_group_name">群名称</string>
    <string name="im_disband_group">解散群组</string>
    <string name="im_logout_group">退出群聊</string>
    <string name="im_logout_and_delete_group">删除并退出</string>
    <string name="confirm_exit_group">退出群聊后，不再接受群内的消息，并且本地的聊天记录也会被删除，确认退出吗？</string>
    <string name="confirm_disband_group">您确定要解散群组吗？</string>
    <string name="text_assessment_assistant_title">评价助教功能新上线</string>
    <string name="text_assessment_assistant_content">您的评价会让助教做的更好哦</string>
    <!--音频-->
    <string name="text_audio_download_failed">下载失败，点击重新下载</string>
    <string name="text_audio_downloading">加载中...</string>
    <string name="text_audio_duration">%s”</string>
    <string name="text_audio_click_to_play">点击播放</string>
    <string name="text_audio_record_time_too_short">录音时间太短</string>
    <string name="text_audio_record_unknown_error">录音错误</string>
    <string name="tips_audio_play_failed">音频播放失败</string>

    <string name="dlg_text_audio_record_countdown_total_secs">(最长可录制%s)</string>
    <string name="open_live_cloud">我已了解，立即开启</string>
    <string name="create_live_cloud_success">生成直播课成功</string>
    <string name="create_live_cloud_fail">生成直播课失败</string>
    <string name="live_cloud_title">在线授课</string>

    <string name="dlg_title_audio_record_permission_request">录音不可用</string>
    <string name="dlg_msg_audio_record_permission_request">请在手机的“设置-权限”中允许轻轻家教录音</string>
    <string name="dlg_positive_audio_record_permission_request">去设置</string>

    <!-- 视频播放 -->
    <string name="text_video_play_no_network">网络未连接，请检查网络设置</string>
    <string name="text_video_play_wif_to_mobile">您正在使用非wifi网络，播放将产生流量费用</string>
    <string name="text_video_play_server_error">服务器开小差儿</string>
    <string name="text_video_play_retry">刷新重试</string>

    <string name="text_release_to_view">释放查看</string>
    <string name="text_view_more">查看更多</string>
    <string name="text_live_play_lock_title">%1$s正在给您的孩子上课</string>
    <string name="text_live_replay_lock_title">课堂回放：%1$s正在给您的孩子上课</string>
    <string name="text_live_play_lock_time">%1$s开始</string>

    <string name="text_admin">管理员</string>


    <!--渠道-->
    <string name="chnid_ta_share_homepage">h5_ta_share_homepage</string>
    <string name="chnid_ta_share_namecard">h5_ta_share_namecard</string>
    <string name="chnid_stu_share_tapage">h5_stu_share_tapage</string>
    <string name="chnid_lecture">xt_share</string>
    <string name="chnid_fanta">wd_share</string>
    <!--学迹卡分享页的渠道ID-->
    <string name="chnid_stu_fback_share">stu_fback_share</string>

    <!--新版渠道，chid-->
    <string name="chid_share_feedback">170101</string>
    <string name="chid_teacher_lecture">170102</string>
    <string name="chid_ta_lecture">170104</string>
    <string name="chid_fanta_share_feedback">170603</string>
    <string name="chid_fanta_share_ta">170604</string>
    <string name="chid_fanta_register">170607</string>
    <string name="chid_appraise_share_feedback">170300</string>
    <string name="chid_student_default">190300</string>
    <string name="chid_teacher_default">190201</string>
    <string name="chid_ta_default">190400</string>
    <string name="chid_ta_name_card">190402</string>
    <string name="chid_ta_official_site">190403</string>

    <!--在线课试听-->
    <string name="text_online_free">免费试听</string>

    <string name="share_saved">已保存</string>
    <string name="share_save">保存到本地</string>
    <string name="share_friend">微信好友</string>
    <string name="share_wx">微信朋友圈</string>
    <string name="share_compat_title">分享给朋友</string>

    <string name="input_error_tip">请至少填写%d个字</string>
    <string name="auto_login">自动登陆中...</string>
</resources>
